cicd/k8s/drl.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: drl-hk-aks-demo-java-maven-shuyao
  namespace: ns-mua-training
spec:
  host: svc-hk-aks-demo-java-maven-shuyao.ns-mua-training.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http1MaxPendingRequests: 30
        maxRequestsPerConnection: 100
    outlierDetection:
      consecutiveErrors: 3
      interval: 600ms
      baseEjectionTime: 10ms
      maxEjectionPercent: 100
  subsets:
    - name: v3
      labels:
        version: p3
