cicd/k8s/vs.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-hk-aks-demo-java-maven-shuyao
  namespace: ns-mua-training
spec:
  hosts:
    - "*"
    # - hk-aks-demo-java-maven-shuyao.ns-mua-training
    # - svc-hk-aks-demo-java-maven-shuyao.ns-mua-training.svc.cluster.local

  gateways:
    - istio-system/istio-ingressgateway
  http:
    #TODO: Default httpName
    - name: hk-aks-demo-java-maven-shuyao
      match:
        - uri:
            prefix: /hk-aks-demo-java-maven-shuyao
      route:
        - destination:
            host: svc-hk-aks-demo-java-maven-shuyao.ns-mua-training.svc.cluster.local
            port:
              number: 8080
            subset: v1
          weight: 100
      timeout: 500ms
      retries:
        attempts: 3
        perTryTimeout: 200ms
        retryOn: 5xx
